--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta http-equiv="Content-type" content="text/html" charset="utf-8" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
     <title>{% block title %}{{ site_name }} par Alexandre Fradet !{% endblock %}</title>
 
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">{{ site_name }}</h5>
+                    <h5 class="green-text">{{ site_name }}</h5>
                     <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.<br></p>
                 </div>
                 <div class="col l4 offset-l2 s12">
