--- a/web/css/main.css
+++ b/web/css/main.css
@@ -179,6 +179,7 @@ header, main, footer {
 
 #logo-container {
     height:120px;
+    margin-bottom: 35px;
 }
 .brand-logo img {
     height:100%;
@@ -192,4 +193,25 @@ header, main, footer {
 
 .table-of-contents a.active {
     border-left: 4px solid #009900;
+}
+
+.table-of-contents a:hover {
+    border-left: 3px solid #00b200;
+}
+
+.side-nav li {
+    text-align:center;
+}
+
+nav,footer {
+    background-image: url('../img/background-greyzz.png');
+
+}
+
+.side-nav {
+    width:175px;
+}
+
+.navbar-sp {
+    height:25px;
 }
