--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -22,9 +22,14 @@
             <li><a href="#projects">Projets</a></li>
             <li><a href="#hackatons">Hackatons</a></li>
             <li class="navbar-sp"></li>
-            <li>Contact</li>
-            <li class="navbar-sp"></li>
             <li><a href="{{ asset('download/Notice_test.pdf')}}" download="">Mon CV</a></li>
+            <li class="navbar-sp"></li>
+            <li>Contact :</li>
+            <li class="contact"><a href="https://twitter.com/{{ twitter }}" target="_blank"><img src="{{ asset('/img/twitter-black.png')}}" alt="twitter"/></a>
+                <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('/img/github-black.png') }}" alt="github" /></a></li>
+            <li class="contact"><a href="https://fr.linkedin.com/in/{{ linkedin }}" target="_blank"><img src="{{ asset('/img/linkedin-black.png')}}" alt="linkedin"></a>
+                <a href="mailto:{{ mail}}"><img src="{{ asset('/img/mail-black.png')}}"/></a></li>
+
         </ul>
     </header>
 {%  endblock %}
