--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -39,8 +39,7 @@
 
     <div class="container">
         <div class="row resume-title">
-            <h1>Alexandre Fradet, Développeur Web</h1>
-
+            <h1>Alexandre Fradet, Développeur Web Jr</h1>
         </div>
 
         <div class="row resume-title section scrollspy" id="presentation">
@@ -49,7 +48,7 @@
 
         </div>
         <div class="row">
-            <div class="col offset-s1 s10 offset-m2 m8">
+            <div class="col offset-s1 s10">
                 <p>Ancien de la relation client, je suis actuellement en reconversion au métier de développeur web à la Wild Code School.<br>
                     A l'issu de la formation, je passerai l'epreuve pour devenir officiellement développeur web, et serai donc en recherche de stage/contrat pour début février afin de pouvoir présenter l'épreuve.
                 </p>
