Replace block body by block content. Adapt base layout for twig

--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -5,7 +5,7 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/logbook.css') }}" />
 {% endblock %}
-{% block body %}
+{% block content %}
 
     <div class="row">
         <div class="col s12 offset-m2 m8 offset-l3 l6">
