--- a/app/Resources/views/Main/settings.html.twig
+++ b/app/Resources/views/Main/settings.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}BlogBundle:Main:settings{% endblock %}
 
-{% block body %}
+{% block content %}
 <h1>Welcome to the Main:contact page</h1>
 {% endblock %}
 
