--- a/app/Resources/views/Main/index2.html.twig
+++ b/app/Resources/views/Main/index2.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Accueil - Home | {{ site_name }} {% endblock %}
 {% block menu %}{% endblock %}
-{% block body %}
+{% block content %}
     <div class="row">
 
         <h1>Bienvenue sur {{ site_name }}</h1>
