--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Projets - Stack technique perso | {{ site_name }}{% endblock %}
 
-{% block body %}
+{% block content %}
 
     <div class="col hide-on-small-only m3 l2">
         <ul class="section table-of-contents pinned">
