--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,20 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 
-    <title>{% block title %}{{ site_name }} par Alexandre Fradet !{% endblock %}</title>
-
-    <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
-    <!-- Optional theme -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+    <title>{% block title %}{{ site_name }}{% endblock %}</title>
 
     <!-- Compiled and minified Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <!-- Materialize icon -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+
     {% block stylesheets %}
     {% endblock %}
 
@@ -28,6 +22,7 @@
 </head>
 
 <body>
+{% block body %}
 {% block menu %}
     <header id="head">
         <nav class="green darken-3 z-depth-5">
@@ -53,24 +48,7 @@
     </header>
 {%  endblock %}
 <main>
-
-{# Bottom fixed button #}
-
-    <div class="fixed-action-btn">
-        <a href="#" data-activates="slide-out" class="button-collapse2 btn-floating btn-large green darken-3">
-
- {#       <a href="#head" class="btn-floating btn-large green darken-3"> #}
-            <img src="{{ asset('/img/profile-black.png') }}" alt="profile">
-        </a>
-        <ul>
-            <li><a href="https://twitter.com/{{ twitter }}" target="_blank" class="btn-floating yellow darken-1"><img src="{{ asset('/img/twitter-black.png')}}" alt="twitter"/></a></li>
-            <li><a href="https://github.com/{{ github }}" target="_blank" class="btn-floating green"><img src="{{ asset('/img/github-black.png') }}" alt="github" /></a></li>
-            <li><a href="https://fr.linkedin.com/in/{{ linkedin }}" target="_blank" class="btn-floating blue"><img src="{{ asset('/img/linkedin-black.png')}}" alt="linkedin"></a></li>
-            <li><a href="mailto:{{ mail}}" class="btn-floating red"><img src="{{ asset('/img/mail-black.png')}}"/></a></li>
-        </ul>
-    </div>
-
-{% block body %}{% endblock %}
+{% block content %}{% endblock %}
 </main>
 
 
@@ -103,7 +81,7 @@
     <script type="text/javascript" src="{{ asset('js/main.js') }}" ></script>
 
 {% endblock %}
-
+{% endblock %}
 </body>
 
 </html>
