Did the new index page. Disable link for now

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Inscription - Register | {{ site_name }}{% endblock %}
 
-{% block body %}
+{% block content %}
 
     <div class="row">
         <div class="col offset-l4 l4 offset-m3 m6 offset-s2 s8">
