--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -1,8 +1,22 @@
 {% extends "base.html.twig" %}
 
 {% block title %}Welcome - Bienvenue | {{ site_name }} {% endblock %}
-{% block menu %}{% endblock %}
 
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/index.css') }}" />
+    {% endblock %}
+
+{% block menu %}{% endblock %}
+{% block content %}
+    <div class="container">
+        <div class="row valign-wrapper">
+            <div class="col offset-s1 s10 offset-m2 m8 offset-l3 l6 valign">
+                <img src="{{ asset('/img/logo_perso-white.png') }}" class="circle z-depth-2">
+                <h1>Mise en ligne prochaine</h1>
+            </div>
+        </div>
+    </div>
+    {% endblock %}
 
 
 {% block footer %}{% endblock %}
