Create a specific css file for resume. Harmonize card height

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -1,7 +1,8 @@
 {% extends "base.html.twig" %}
 
-{% block title %}BlogBundle:Main:settings
-{% endblock %}
+{% block title %}BlogBundle:Main:settings{% endblock %}
+
+{% block stylesheets %}<link rel="stylesheet" href="{{ asset('css/resume.css') }}" />{% endblock %}
 
 {% block menu %}
     <header>
@@ -161,8 +162,8 @@
                         <img src="{{ asset('img/Hackaton36-1.png') }}" alt="tag-ton-metier">
                         <span class="card-title">Tag ton métier</span>
                     </div>
-                    <div class="card-content">
-                        <p>Application destinée aux visiteurs du Mondial des Métiers leur permettant de renseigner des mots-clés et impression après une rencontre avec un des profesionnels du salon.</p>
+                    <div class="card-content valign-wrapper">
+                        <p class="valign">Application destinée aux visiteurs du Mondial des Métiers leur permettant de renseigner des mots-clés et impression après une rencontre avec un des profesionnels du salon.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://github.com/Fradou/Hackaton_INSEAD-WCS">Github</a>
@@ -175,8 +176,8 @@
                         <img src="{{ asset('img/the-booster-2.png') }}" alt="the-booster">
                         <span class="card-title">The Booster</span>
                     </div>
-                    <div class="card-content">
-                        <p>Plateforme de crowfunding de compètences..</p>
+                    <div class="card-content valign-wrapper">
+                        <p class="valign">Plateforme de crowfunding de compètences..</p>
                     </div>
                     <div class="card-action">
                         <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
@@ -189,8 +190,8 @@
                         <img src="{{ asset('img/jekyll-1.png') }}" alt="jekyll">
                         <span class="card-title">Restaurant Jekyll</span>
                     </div>
-                    <div class="card-content">
-                        <p>Projet fictif : Création d'un site vitrine pour un restaurant spécialisé dans la ratatouille.</p>
+                    <div class="card-content valign-wrapper">
+                        <p class="valign">Projet fictif : Création d'un site vitrine pour un restaurant spécialisé dans la ratatouille.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://github.com/Fradou/Jekylls-Restaurant">Github</a>
@@ -210,8 +211,8 @@
                         <img src="{{ asset('img/Hackaton36-1.png') }}" alt="hackaton-insead">
                         <span class="card-title">JustAsk</span>
                     </div>
-                    <div class="card-content">
-                        <p>Application déstinés aux touristes / résidents étranger permettant la mise en relation avec un "local" qui pourra aider dans des démarches et situations complexes en servant d'intermédiaire et traducteur. Basé sur une idée d'un groupe d'étudiant de l'INSEAD.</p>
+                    <div class="card-content valign-wrapper">
+                        <p class="valign">Application déstinés aux touristes / résidents étranger permettant la mise en relation avec un "local" qui pourra aider dans des démarches et situations complexes en servant d'intermédiaire et traducteur. Basé sur une idée d'un groupe d'étudiant de l'INSEAD.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://github.com/Fradou/Hackaton_INSEAD-WCS">Github</a>
@@ -224,8 +225,8 @@
                         <img src="{{ asset('img/Hackaton36-1.png') }}" alt="hackaton-36h">
                         <span class="card-title">Lyon à la carte</span>
                     </div>
-                    <div class="card-content">
-                        <p>Site de création de circuits touristiques développé au cours d'un hackaton d'environ 30h dans le cadre de la formation Wild Code School.</p>
+                    <div class="card-content valign-wrapper">
+                        <p class="valign">Site de création de circuits touristiques développé au cours d'un hackaton d'environ 30h dans le cadre de la formation Wild Code School.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
@@ -238,8 +239,8 @@
                         <img src="{{ asset('img/Hackaton36-1.png') }}" alt="hackaton-24h">
                         <span class="card-title">Lyon à la carte</span>
                     </div>
-                    <div class="card-content">
-                        <p>Site de création de circuits touristiques développé au cours d'un hackaton d'environ 30h dans le cadre de la formation Wild Code School.</p>
+                    <div class="card-content valign-wrapper">
+                        <p class="valign">Site de création de circuits touristiques développé au cours d'un hackaton d'environ 30h dans le cadre de la formation Wild Code School.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
