Add meta balise for description, author and keywords

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}BlogBundle:Main:settings{% endblock %}
+{% block title %}CV {{ site_name }} - Développeur PHP Symfony 2 à Lyon{% endblock %}
 
 {% block stylesheets %}<link rel="stylesheet" href="{{ asset('css/resume.css') }}" />{% endblock %}
 
