--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,13 @@
 <html lang="fr">
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    {# SEO #}
+
+    <meta name="description" content="Site personnel d’Alexandre Fradet, Développeur Web PHP Symfony 2 sur Lyon. Web Developer. CV, blog, tutos et plus encore.">
+    <meta name="keywords" content="Symfony2, Symfony, PHP, HTML, CSS, JavaScript, Jquery, Mysql, developpeur web, web developper, site web">
+    <meta name="author" content="Alexandre Fradet">
+
 
 
     <title>{% block title %}{{ site_name }}{% endblock %}</title>
