Add comment for clarity

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    {# SEO #}
 
+    <!-- SEO -->
     <meta name="description" content="Site personnel d’Alexandre Fradet, Développeur Web PHP Symfony 2 sur Lyon. Web Developer. CV, blog, tutos et plus encore.">
     <meta name="keywords" content="Symfony2, Symfony, PHP, HTML, CSS, JavaScript, Jquery, Mysql, developpeur web, web developper, site web">
     <meta name="author" content="Alexandre Fradet">
@@ -17,11 +17,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <!-- Materialize icon -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Style -->
     <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+    {% block stylesheets %}{% endblock %}
 
-    {% block stylesheets %}
-    {% endblock %}
-
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="{{ asset('img/logo_perso-white.png')}}" />
     <link rel="shortcut icon" type="image/x-icon" href="{{ asset('/img/logo_perso-white.ico') }}" />
 
