--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -6,9 +6,9 @@
 
 {% block menu %}
     <header>
-        <nav class="green darken-3 z-depth-1">
+        <nav class="hide-on-large-only z-depth-1">
             <div class="container">
-                <a href="#" data-activates="slide-out" class="button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="slide-out" class="button-collapse green-text"><i class="material-icons">menu</i></a>
             </div>
         </nav>
 
