Styling and working a bit on texts

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -43,6 +43,8 @@
             <h1>Alexandre Fradet, Développeur Web Jr</h1>
         </div>
 
+        <!-- Presentation -->
+
         <div class="row resume-title section scrollspy" id="presentation">
             <h2>A propos</h2>
             <h3><small>Présentation en quelques mots</small></h3>
@@ -56,10 +58,11 @@
             </div>
         </div>
 
+        <!-- Competences -->
+
         <div class="row resume-title section scrollspy" id="skills">
             <h2>Compètences techniques</h2>
             <h3><small>Stack technique perso !</small></h3>
-
         </div>
 
         <div class="row skills-tile">
@@ -95,7 +98,7 @@
                 <div class="card green accent-2 z-depth-4">
                     <div class="card-content green-text text-darken-4">
                             <span class="card-title"><small>
-                            Je travaille principalement avec <strong>PHP Storm</strong>.
+                            Je travaille avec <strong>PHP Storm</strong>.
                             </small></span>
                     </div>
                 </div>
@@ -127,7 +130,7 @@
                 <div class="card green accent-4 z-depth-4">
                     <div class="card-content green-text text-darken-4">
                             <span class="card-title">
-                                    Utilisation de la méthode <strong>SCRUM</strong>
+                                    Méthode <strong>SCRUM</strong>
                             </span>
                     </div>
                 </div>
@@ -149,6 +152,8 @@
 
             </div>
         </div>
+
+        <!-- Projets -->
 
         <div class="row resume-title section scrollspy" id="projects">
             <h2>Projets</h2>
@@ -177,10 +182,11 @@
                         <span class="card-title">The Booster</span>
                     </div>
                     <div class="card-content valign-wrapper">
-                        <p class="valign">Plateforme de crowfunding de compètences..</p>
+                        <p class="valign">Plateforme de crowfunding de compètences.<br>
+                        Création du site vitrine présentant le concept et permettant la pré-inscription.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
+                        <a href="https://the-booster.com/">The Booster</a>
                     </div>
                 </div>
             </div>
@@ -199,6 +205,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Hackatons -->
 
         <div class="row resume-title section scrollspy" id="hackatons">
             <h2>Hackatons</h2>
@@ -248,7 +256,6 @@
                 </div>
             </div>
         </div>
-
 
     </div>
 {% endblock %}
