--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
     <meta name="description" content="Site personnel d’Alexandre Fradet, Développeur Web PHP Symfony 2 sur Lyon. Web Developer. CV, blog, tutos et plus encore.">
     <meta name="keywords" content="Symfony2, Symfony, PHP, HTML, CSS, JavaScript, Jquery, Mysql, developpeur web, web developper, site web">
     <meta name="author" content="Alexandre Fradet">
+    <meta name="robots" content="all" />
 
 
 
@@ -86,6 +87,7 @@
     <script type="text/javascript" src="{{ asset('js/main.js') }}" ></script>
 
 {% endblock %}
+
 {% endblock %}
 </body>
 
