Add last alt for images. Removes bad align on list

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -28,7 +28,7 @@
             <li>Contact :</li>
             <li class="contact">
                 <a href="https://github.com/{{ github }}" target="_blank"><img src="{{ asset('/img/github-black.png') }}" alt="github" /></a>
-                <a href="mailto:{{ mail}}"><img src="{{ asset('/img/mail-black.png')}}"/></a>
+                <a href="mailto:{{ mail}}"><img src="{{ asset('/img/mail-black.png')}}" alt="mail"/></a>
 
             </li>
             <li class="contact">
@@ -76,9 +76,9 @@
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
                         <ul>
-                            <li>En formation <strong>Développeur PHP</strong> à la <strong>@WildCodeSchool</strong>.</li>
-                            <li>Spécialisé <strong>Symfony 2</strong>. Site réalisé avec ce framework.</li>
-                            <li>Développement en <strong>POO</strong> et structure <strong>MVC</strong>.</li>
+                            <li>En formation <strong>Développeur PHP</strong>.</li>
+                            <li>Spécialisé <strong>Symfony 2</strong>.</li>
+                            <li>Développement en <strong>POO</strong> et <strong>MVC</strong>.</li>
                         </ul>
                     </div>
                 </div>
@@ -87,9 +87,18 @@
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>JavaScript</strong></span>
                         <ul>
-                            <li>Site réalisé avec <strong>jQuery</strong>, librairie avec laquelle je travaille.</li>
+                            <li>Site réalisé avec <strong>jQuery</strong> avec lequel je travaille.</li>
                             <li>J'envisage <strong>NodeJS</strong> comme prochaine techno.</li>
+                            <li>Je suis interessé par <strong>MEAN</strong>.</li>
                         </ul>
+                    </div>
+                </div>
+
+                <div class="card green accent-4 z-depth-4">
+                    <div class="card-content green-text text-darken-4">
+                            <span class="card-title">
+                                    Méthode <strong>SCRUM</strong>
+                            </span>
                     </div>
                 </div>
 
@@ -116,16 +125,8 @@
                         <ul>
                             <li>Je travaille sur <strong>Bootstrap</strong>.</li>
                             <li>Site réalisé en <strong>Materializecss</strong>.</li>
-                            <li>J'hésite entre <strong>Foundation</strong> et <strong>Sass</strong> pour mon prochain projet.</li>
+                            <li>J'envisage <strong>Foundation</strong> pour mon prochain projet.</li>
                         </ul>
-                    </div>
-                </div>
-
-                <div class="card green accent-4 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
-                            <span class="card-title">
-                                    Méthode <strong>SCRUM</strong>
-                            </span>
                     </div>
                 </div>
 
@@ -133,10 +134,11 @@
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title">Autres <strong>outils</strong>
                         </span>
-                        <ul style="text-align: center">
-                            <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
+                        <ul>
                             <li>Base de données <strong>MySQL</strong>.</li>
+                            <li>CMS <strong>Drupal</strong></li>
                             <li>Serveur <strong>Apache2</strong>.</li>
+                            <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
                             <li>Linux <strong>Ubuntu</strong></li>
                         </ul>
 
