Add error 404 page

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -52,7 +52,7 @@
 
         <div class="row resume-title section scrollspy" id="presentation">
             <h2>A propos</h2>
-            <h3><small>Présentation en quelques mots</small></h3>
+            <h3>Présentation en quelques mots</h3>
 
         </div>
         <div class="row">
@@ -67,7 +67,7 @@
 
         <div class="row resume-title section scrollspy" id="skills">
             <h2>Compètences techniques</h2>
-            <h3><small>Stack technique perso !</small></h3>
+            <h3>Stack technique perso</h3>
         </div>
 
         <div class="row skills-tile">
@@ -76,9 +76,9 @@
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
                         <ul>
-                            <li>En formation <strong>Développeur PHP</strong>.</li>
-                            <li>Spécialisé <strong>Symfony 2</strong>.</li>
-                            <li>Développement en <strong>POO</strong> et <strong>MVC</strong>.</li>
+                            <li>En formation <strong>Développeur PHP</strong></li>
+                            <li>Spécialisé <strong>Symfony 2</strong></li>
+                            <li>Développement en <strong>POO</strong> et <strong>MVC</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -87,9 +87,9 @@
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>JavaScript</strong></span>
                         <ul>
-                            <li>Site réalisé avec <strong>jQuery</strong> avec lequel je travaille.</li>
-                            <li>J'envisage <strong>NodeJS</strong> comme prochaine techno.</li>
-                            <li>Je suis interessé par <strong>MEAN</strong>.</li>
+                            <li>Site réalisé avec <strong>jQuery</strong> avec lequel je travaille</li>
+                            <li>J'envisage <strong>NodeJS</strong> comme prochaine techno</li>
+                            <li>Je suis interessé par <strong>MEAN</strong></li>
                         </ul>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                 <div class="card green accent-2 z-depth-4">
                     <div class="card-content green-text text-darken-4">
                             <span class="card-title"><small>
-                            Je travaille avec <strong>PHP Storm</strong>.
+                            Je travaille avec <strong>PhpStorm</strong>
                             </small></span>
                     </div>
                 </div>
@@ -123,9 +123,9 @@
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>CSS 3</strong></span>
                         <ul>
-                            <li>Je travaille sur <strong>Bootstrap</strong>.</li>
-                            <li>Site réalisé en <strong>Materializecss</strong>.</li>
-                            <li>J'envisage <strong>Foundation</strong> pour mon prochain projet.</li>
+                            <li>Je travaille sur <strong>Bootstrap</strong></li>
+                            <li>Site réalisé en <strong>Materializecss</strong></li>
+                            <li>J'envisage <strong>Foundation</strong> pour mon prochain projet</li>
                         </ul>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         <ul>
                             <li>Base de données <strong>MySQL</strong>.</li>
                             <li>CMS <strong>Drupal</strong></li>
-                            <li>Serveur <strong>Apache2</strong>.</li>
+                            <li>Serveur <strong>Apache2</strong></li>
                             <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
                             <li>Linux <strong>Ubuntu</strong></li>
                         </ul>
@@ -153,7 +153,7 @@
 
         <div class="row resume-title section scrollspy" id="projects">
             <h2>Projets</h2>
-            <h3><small>Réalisations & Contributions !</small></h3>
+            <h3>Réalisations & Contributions</h3>
         </div>
 
         <div class="row projects-tile">
@@ -206,7 +206,7 @@
 
         <div class="row resume-title section scrollspy" id="hackatons">
             <h2>Hackatons</h2>
-            <h3><small>Les sessions de codage intensif !</small></h3>
+            <h3>Les sessions de codage intensif</h3>
         </div>
         <div class="row hackatons-tile">
             <div class="col offset-s1 s10 m4">
