--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -8,7 +8,7 @@
     <header>
         <nav class="hide-on-large-only z-depth-1">
             <div class="container">
-                <a href="#" data-activates="slide-out" class="button-collapse green-text"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="slide-out" class="button-collapse green-text pinned left"><i class="material-icons">menu</i></a>
             </div>
         </nav>
 
@@ -44,7 +44,7 @@
 
 
     <div class="container">
-        <div class="row resume-title">
+        <div class="row resume-title" id="name">
             <h1>Alexandre Fradet, Développeur Web Jr</h1>
         </div>
 
