Change back background for body-nav-footer

--- a/app/Resources/views/Main/resume.html.twig
+++ b/app/Resources/views/Main/resume.html.twig
@@ -73,7 +73,7 @@
         <div class="row skills-tile">
             <div class="col offset-s1 s10 m6">
                 <div class="card light-green z-depth-4">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
                         <ul>
                             <li>En formation <strong>Développeur PHP</strong></li>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="card lime darken-1 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                         <span class="card-title"><strong>JavaScript</strong></span>
                         <ul>
                             <li>Site réalisé avec <strong>jQuery</strong> avec lequel je travaille</li>
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="card green accent-4 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                             <span class="card-title">
                                     Méthode <strong>SCRUM</strong>
                             </span>
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="card green accent-2 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                             <span class="card-title"><small>
                             Je travaille avec <strong>PhpStorm</strong>
                             </small></span>
@@ -112,7 +112,7 @@
             </div>
             <div class="col offset-s1 s10 m6">
                 <div class="card lime lighten-2 z-depth-2">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                             <span class="card-title">
                                     <strong>HTML 5</strong>
                             </span>
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="card green lighten-2 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                         <span class="card-title"><strong>CSS 3</strong></span>
                         <ul>
                             <li>Je travaille sur <strong>Bootstrap</strong></li>
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="card green accent-5 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
+                    <div class="card-content black-text text-darken-4">
                         <span class="card-title">Autres <strong>outils</strong>
                         </span>
                         <ul>
