--- a/web/css/logbook.css
+++ b/web/css/logbook.css
@@ -1,27 +1,1 @@
-#logbook_comment span {
-    font-weight: bold;
-}
-
-#logcom_header {
-    margin-top: 12.5vh;
-}
-
-#logcom_header h3 {
-    line-height: 100%;
-}
-
-.log_article h2 {
-    background-image:none;
-}
-
-.logbook h4 {
-    font-style: oblique;
-}
-
-#logdate {
-    margin-top: -5.25vh;
-}
-
-#logbook_articles {
-    text-align: justify;
-}
+#logbook_comment span{font-weight:700}#logcom_header{margin-top:12.5vh}#logcom_header h3{line-height:100%}.log_article h2{background-image:none}.logbook h4{font-style:oblique}#logdate{margin-top:-5.25vh}#logbook_articles{text-align:justify}
