Add gulp image minifier

--- a/web-src/css/main.css
+++ b/web-src/css/main.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-image: url('../../web/img/background-greyzz.png');
+    background-image: url('../img/background-greyzz.png');
 }
 
 main {
