--- a/web-src/css/main.css
+++ b/web-src/css/main.css
@@ -90,11 +90,11 @@ main {
 
 .home_bloc_tile p {
 }
-
+/*
 .hoverable img {
     margin-top: -2.5vh;
 }
-
+*/
 #socialnet_tile img {
     height: 32px;
     width: 32px;
