--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -12,7 +12,7 @@
         <div class="row valign-wrapper">
             <div class="col offset-s1 s10 offset-m2 m8 offset-l3 l6 valign">
                 <a href="{{ path('resume') }}"><img src="{{ asset('/img/logo_perso-white.png') }}" class="circle z-depth-2" alt="logo"></a>
-                <h1>Mise en ligne prochaine</h1>
+                <h1>Bienvenue</h1>
             </div>
         </div>
     </div>
